# docassemble-VTFinancialDisclosure

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docassemble/VTFinancialDisclosure/data/questions/: VT_financial_disclosure.yml  VT_financial_disclosure_to_include.yml
docassemble/VTFinancialDisclosure/data/templates/: financial_disclosure_addendum.docx  financial_disclosure_next_steps.docx
