[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.VTFinancialDisclosure"
version = "1.0"
description = "Financial Disclosure - form 100-00127"
readme = "README.md"
authors = [
    { name = "K. Surette, Legal Services Vermont", email = "ksurette@legalservicesvt.org" },
]
dependencies = [
    "docassemble.ALToolbox @ git+https://github.com/suffolklitlab/docassemble-ALToolbox.git@main",
    "docassemble.AssemblyLine @ git+https://github.com/suffolklitlab/docassemble-AssemblyLine.git@main",
    "docassemble.GithubFeedbackForm>=0.5.6",
    "docassemble.VTFeedback @ git+https://github.com/LSVermont/docassemble-VTFeedback.git@main",
    "docassemble.VTSharedYMLFile @ git+https://github.com/LSVermont/docassemble-VTSharedYMLFile.git@main",
]

[project.urls]
Homepage = "https://VTCourtForms.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
